# mcp-security-tester

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
corpus/manifests/: mcp-server-filesystem.json
docs/: architecture.md  attacks.md  implementation-plan.md
mcp_security_tester/: __init__.py  cli.py
mcp_security_tester/anomaly_detector/: detector.py
mcp_security_tester/call_logger/: logger.py
mcp_security_tester/manifest_collector/: collector.py  sources.py
mcp_security_tester/proxy/: manifest_watcher.py  output_scanner.py  server.py
mcp_security_tester/static_analyzer/: signals.py
