[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-security-tester"
version = "0.1.0"
description = "Automated security testing for MCP servers — static analysis and adversarial simulation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mcp-tester = "mcp_security_tester.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_security_tester*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
